crates/shiplog-workstreams/tests/snapshots/format_stability__workstreams_suggested_yaml.snap
---
source: crates/shiplog-workstreams/tests/format_stability.rs
expression: text
---
version: 1
generated_at: 2025-06-01T12:00:00Z
workstreams:
- id: 3eab287c3c5de92b2509d4c089d4946901a3bd3a020cb014d36f0c5368332720
  title: API Service
  summary: REST API development
  tags:
  - api
  - backend
  stats:
    pull_requests: 5
    reviews: 3
    manual_events: 1
  events:
  - 52ade12fb9f0f69a8e2e6b0883780aaa7858cd724e4c291c3a21d560c53fd9c8
  - df37eed475ac23a66e06ed0110cb2aae1f7b9401b85a34c55e8912c01609eeda
  receipts:
  - 52ade12fb9f0f69a8e2e6b0883780aaa7858cd724e4c291c3a21d560c53fd9c8
