crates/shiplog-workstreams/tests/snapshots/format_stability__workstreams_yaml_roundtrip.snap
---
source: crates/shiplog-workstreams/tests/format_stability.rs
expression: text
---
version: 1
generated_at: 2025-06-01T12:00:00Z
workstreams:
- id: 0544bb5a3630bdac7e9da0276c87a8f1b89cd5d011903d1791cb77a3c521b037
  title: Authentication
  summary: OAuth2 integration
  tags:
  - security
  stats:
    pull_requests: 5
    reviews: 3
    manual_events: 1
  events:
  - 5fe344ad0cf9acbffb4bc45a718ad98b4138abd47bb97882294b7a6d74e78db5
  receipts:
  - 5fe344ad0cf9acbffb4bc45a718ad98b4138abd47bb97882294b7a6d74e78db5
- id: f72755385ef59d76388c2ccde9af7720fb18d3c77c57edfea9dc7d3f9d0a4557
  title: Performance
  summary: null
  tags: []
  stats:
    pull_requests: 0
    reviews: 0
    manual_events: 0
  events: []
  receipts: []
